--- a/src/sass/blocks/_slider.scss
+++ b/src/sass/blocks/_slider.scss
@@ -98,13 +98,16 @@
             border-radius: 4px;
             margin-left: 18px;
             cursor: pointer;
-            
+            &-active {
+                height: 8px;
+                background: $orange-color;
+            }
         }
     }
-    .active, .slider__line_item:hover {
+    /*.active, .slider__line_item:hover {
             height: 8px;
             background: $orange-color;
-    }
+    }*/
 }
     .prev__btn {
         left: 0;
